Remove kdyby/console dependency and use symfony/console instead. Add mapping for tests folder.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "pd/supervisor",
+	"name": "tapclick-cz/supervisor",
 	"description": "Supervisor configuration with console commands for nette applications",
 	"keywords": [
 		"supervisor",
@@ -8,7 +8,7 @@
 		"command",
 		"nette"
 	],
-	"homepage": "https://github.com/peckadesign/Supervisor",
+	"homepage": "https://github.com/tapclick-cz/Supervisor",
 	"license": [
 		"MIT"
 	],
@@ -20,13 +20,17 @@
 		{
 			"name": "Vít Kutný",
 			"homepage": "https://github.com/vitkutny"
+		},
+		{
+			"name": "Tapclick",
+			"homepage": "http://www.tapclick.cz"
 		}
 	],
 	"require": {
 		"php": "^7.4 | ^8.0",
 		"nette/application": "^3.0.0",
 		"nette/di": "~3.0.0",
-		"kdyby/console": "~2.8|dev-master",
+		"symfony/console": "^4.2.5|^5.0.0",
 		"supervisorphp/configuration": "^0.3"
 	},
 	"require-dev": {
@@ -35,7 +39,8 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Pd\\Supervisor\\": "src/"
+			"Pd\\Supervisor\\": "src/",
+			"PdTests\\Supervisor\\": "tests/"
 		}
 	}
 }
